--- a/LanguageModel/YourImmutableTypeDefinition.tt
+++ b/LanguageModel/YourImmutableTypeDefinition.tt
@@ -28,12 +28,12 @@
 		ImmutableList<SyntaxNode> children;
 	}
 
-	class ElseBlock {
+	class ElseBlock { //TODO: inherit from syntax node
         Keyword elseKeyword;
         Block block;
     }
 
-    class ElseIfBlock {
+    class ElseIfBlock { //TODO: inherit from syntax node
         Keyword elseIfKeyword;
         Expression exp;
         Keyword thenKeyword;
@@ -60,7 +60,12 @@
 	}
 	
 	class Expression : SyntaxNode {
-		//TODO: implement
+		//TODO: implement further
+		KeyValue keyvalue;
+	}
+
+	class KeyValue : SyntaxNode {
+		string value;
 	}
 	
 	class Keyword : SyntaxNode {
