Made some changes to the inheritance structure within the node language classes.

--- a/LanguageModel/YourImmutableTypeDefinition.tt
+++ b/LanguageModel/YourImmutableTypeDefinition.tt
@@ -28,7 +28,7 @@
 		ImmutableList<SyntaxNode> children;
 	}
 
-	class ElseBlock { //TODO: inherit from syntax node
+	class ElseBlock : SyntaxNode {
         Keyword elseKeyword;
         Block block;
     }
