--- a/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/GeneralUserControl.xaml
+++ b/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/GeneralUserControl.xaml
@@ -7,11 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="498">
     <Grid>
-        <GroupBox x:Name="generalGroupBox" Header="General" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="204" Width="478">
-            <Grid HorizontalAlignment="Left" Height="184" Margin="10,10,0,-13.333" VerticalAlignment="Top" Width="304">
-                <CheckBox x:Name="formatOnEnterCheckbox" Content="Auto format on [Enter]" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" ToolTip="Formatting is applied on a line-by-line basis."/>
-                <CheckBox x:Name="formatOnPasteCheckbox" Content="Auto format on paste" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" ToolTip="Formatting is applied on pasted text automattically."/>
-                <CheckBox x:Name="formatOnBlockCheckbox" Content="Format on block" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" ToolTip="Formatting is applied on a Lua block after [Enter] is hit after the End keyword."/>
+        <GroupBox x:Name="generalGroupBox" Header="General" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="96" Width="383">
+            <Grid HorizontalAlignment="Left" Height="86" Margin="0,0,0,-13.333" VerticalAlignment="Top" Width="304">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="15*"/>
+                    <ColumnDefinition Width="137*"/>
+                </Grid.ColumnDefinitions>
+                <CheckBox x:Name="formatOnEnterCheckbox" Content="Auto format on [Enter]" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" ToolTip="Formatting is applied on a line-by-line basis." Grid.ColumnSpan="2"/>
+                <CheckBox x:Name="formatOnPasteCheckbox" Content="Auto format on paste" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" ToolTip="Formatting is applied on pasted text automattically." Grid.ColumnSpan="2"/>
+                <CheckBox x:Name="formatOnBlockCheckbox" Content="Format on block" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" ToolTip="Formatting is applied on a Lua block after [Enter] is hit after the End keyword." Grid.ColumnSpan="2"/>
             </Grid>
         </GroupBox>
 
