--- a/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/GeneralUserControl.xaml
+++ b/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/GeneralUserControl.xaml
@@ -6,23 +6,23 @@
              xmlns:local="clr-namespace:Microsoft.VisualStudio.LuaLanguageService.Formatting.OptionPages.UserControls"
              xmlns:properties="clr-namespace:Microsoft.VisualStudio.LanguageServices.Lua.Properties">
     <DockPanel>
-        <GroupBox x:Name="generalGroupBox" Header="General" VerticalAlignment="Top"
+        <GroupBox x:Name="generalGroupBox" Header="{x:Static properties:Resources.GeneralGroupBoxHeader}" VerticalAlignment="Top"
                   Foreground="{DynamicResource {x:Static SystemColors.WindowTextBrushKey}}">
             <StackPanel DockPanel.Dock="Top" Margin="0,2,0,0" KeyboardNavigation.TabNavigation="Contained">
-                
-                <CheckBox x:Name="formatOnEnterCheckbox" Content="{x:Static properties:Resources.FormatOnEnterCheckboxText}"
+
+                <CheckBox x:Name="formatOnEnterCheckbox" Content="{x:Static properties:Resources.FormatOnEnterCheckboxContent}"
                           HorizontalAlignment="Left" Margin="0,0,0,7"
-                          ToolTip="Formatting is applied on a line-by-line basis."
+                          ToolTip="{x:Static properties:Resources.FormatOnEnterCheckboxToolTips}"
                           IsChecked="{Binding FormatOnEnter}"/>
 
-                <CheckBox x:Name="formatOnPasteCheckbox" Content="Auto format on paste"
+                <CheckBox x:Name="formatOnPasteCheckbox" Content="{x:Static properties:Resources.FormatOnPasteCheckboxContent}"
                           HorizontalAlignment="Left" Margin="0,0,0,7"
-                          ToolTip="Formatting is applied on pasted text automattically."
+                          ToolTip="{x:Static properties:Resources.FormatOnPasteCheckboxToolTips}"
                           IsChecked="{Binding FormatOnPaste}"/>
 
-                <CheckBox x:Name="formatOnBlockCheckbox" Content="Format on block"
+                <CheckBox x:Name="formatOnBlockCheckbox" Content="{x:Static properties:Resources.FormatOnBlockCheckboxContent}"
                           HorizontalAlignment="Left" Margin="0,0,0,0"
-                          ToolTip="Formatting is applied on a Lua block after [Enter] is hit after the End keyword."
+                          ToolTip="{x:Static properties:Resources.FormatOnBlockCheckboxToolTips}"
                           IsChecked="{Binding FormatOnBlock}"/>
             </StackPanel>
         </GroupBox>
