--- a/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/SpacingUserControl.xaml
+++ b/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/SpacingUserControl.xaml
@@ -4,45 +4,59 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Microsoft.VisualStudio.LanguageServices.Lua.Formatting.OptionPages.UserControls"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Margin="0,0,-226,-212">
-        <GroupBox x:Name="groupBox" Header="Spacing" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="229" Width="508">
-            <Grid HorizontalAlignment="Left" Height="279" VerticalAlignment="Top" Width="550" Margin="0,0,-54,-73">
-                <CheckBox x:Name="spaceAfterCommasCheckbox" Content="Space after commas"
-                          HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"
+             xmlns:properties="clr-namespace:Microsoft.VisualStudio.LanguageServices.Lua.Properties"
+             mc:Ignorable="d">
+    <DockPanel>
+        <GroupBox x:Name="groupBox" Header="{x:Static properties:Resources.SpacingGroupBoxHeader}" VerticalAlignment="Top"
+                  Foreground="{DynamicResource {x:Static SystemColors.WindowTextBrushKey}}">
+            <StackPanel DockPanel.Dock="Top" Margin="0,2,0,0" KeyboardNavigation.TabNavigation="Contained">
+                <CheckBox x:Name="spaceAfterCommasCheckbox"
+                          Content="{x:Static properties:Resources.SpaceAfterCommasCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,7"
                           IsChecked="{Binding SpaceAfterCommas}"/>
-                <CheckBox x:Name="spaceBeforeAndAfterBinaryOperationsCheckbox" Content="Space after and before binary operations"
-                          HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"
+                
+                <CheckBox x:Name="spaceBeforeAndAfterBinaryOperationsCheckbox"
+                          Content="{x:Static properties:Resources.SpaceBeforeAndAfterBinOpsCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,7"
                           IsChecked="{Binding SpaceBeforeAndAfterBinaryOperations}"/>
-                <CheckBox x:Name="spaceBeforeAndAfterAssignmentOperatorOnFieldCheckbox" Content="Space before and after assignment operator for fields"
-                          HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top"
+                
+                <CheckBox x:Name="spaceBeforeAndAfterAssignmentOperatorOnFieldCheckbox"
+                          Content="{x:Static properties:Resources.SpaceBeforeAndAfterAssignmentOpsInFieldCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,7"
                           IsChecked="{Binding SpaceBeforeAndAfterAssignmentOperatorOnField}"/>
-                
-                <CheckBox x:Name="spaceBeforeAndAfterAssignmentOperatorInStatementCheckbox" Content="Space before and after assignment operator in statements"
-                          HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"
+                <CheckBox x:Name="spaceBeforeAndAfterAssignmentOperatorInStatementCheckbox"
+                          Content="{x:Static properties:Resources.SpaceBeforeAndAfterAssignmentOpsInStatementsCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,7"
                           IsChecked="{Binding SpaceBeforeAndAfterAssignmentInStatement}"/>
-                <CheckBox x:Name="forLoopAssignmentSpacingCheckbox" Content="Space before and after assignment in for loop"
-                          HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"
+
+                <CheckBox x:Name="forLoopAssignmentSpacingCheckbox"
+                          Content="{x:Static properties:Resources.SpaceBeforeAndAfterAssignmentOpsInForLoopCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,7"
                           IsChecked="{Binding ForLoopAssignmentSpacing}"/>
-                <CheckBox x:Name="spaceBetweenFunctionAndParenthesisCheckbox" Content="Space between function and parenthesis "
-                          HorizontalAlignment="Left" Margin="10,190,0,0" VerticalAlignment="Top"
-                          IsChecked="{Binding SpaceBetweenFunctionAndParenthesis}"/>
-                
-                <CheckBox x:Name="addSpacesOnInsideOfParenthesisCheckbox" Content="Space on inside of parenthesis"
-                          HorizontalAlignment="Left" Margin="10,130,0,0" VerticalAlignment="Top"
-                          IsChecked="{Binding AddSpacesOnInsideOfParenthesis}"/>
-                <CheckBox x:Name="addSpacesOnInsideOfCurlyBracesCheckbox" Content="Spaces on inside of curly braces"
-                          HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top"
-                          IsChecked="{Binding AddSpacesOnInsideOfCurlyBraces}"/>
-                <CheckBox x:Name="addSpacesOnInsideOfSquareBracketsCheckbox" Content="Spaces on inside of square brackets"
-                          HorizontalAlignment="Left" Margin="10,170,0,0" VerticalAlignment="Top"
-                          IsChecked="{Binding AddSpacesOnInsideOfSquareBrackets}"/>
-                <CheckBox x:Name="forLoopIndexSpacingCheckbpx" Content="Remove space between index limits"
-                	HorizontalAlignment="Left" Margin="10,110,0,0" VerticalAlignment="Top"
+                <CheckBox x:Name="forLoopIndexSpacingCheckbpx"
+                          Content="{x:Static properties:Resources.RemoveSpaceBetweenIndexLimitsCheckBoxContent}"
+                	HorizontalAlignment="Left" Margin="0,0,0,7"
                           IsChecked="{Binding ForLoopIndexSpacing}"/>
-            </Grid>
+
+                <CheckBox x:Name="spaceBetweenFunctionAndParenthesisCheckbox"
+                          Content="{x:Static properties:Resources.SpaceBetweenFunctionAndOpenParenCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,7"
+                          IsChecked="{Binding SpaceBetweenFunctionAndParenthesis}"/>
+
+                <CheckBox x:Name="addSpacesOnInsideOfParenthesisCheckbox"
+                          Content="{x:Static properties:Resources.SpaceInsideOfParenthesisCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,7"
+                          IsChecked="{Binding AddSpacesOnInsideOfParenthesis}"/>
+                <CheckBox x:Name="addSpacesOnInsideOfCurlyBracesCheckbox"
+                          Content="{x:Static properties:Resources.SpaceInsideOfCurlyBracesCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,7"
+                          IsChecked="{Binding AddSpacesOnInsideOfCurlyBraces}"/>
+                <CheckBox x:Name="addSpacesOnInsideOfSquareBracketsCheckbox"
+                          Content="{x:Static properties:Resources.SpaceInsideOfSquareBracketsCheckBoxContent}"
+                          HorizontalAlignment="Left" Margin="0,0,0,0"
+                          IsChecked="{Binding AddSpacesOnInsideOfSquareBrackets}"/>
+            </StackPanel>
         </GroupBox>
 
-    </Grid>
+    </DockPanel>
 </UserControl>
