--- a/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/GeneralUserControl.xaml
+++ b/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/GeneralUserControl.xaml
@@ -6,23 +6,23 @@
              xmlns:local="clr-namespace:Microsoft.VisualStudio.LuaLanguageService.Formatting.OptionPages.UserControls"
              xmlns:properties="clr-namespace:Microsoft.VisualStudio.LanguageServices.Lua.Properties">
     <DockPanel>
-        <GroupBox x:Name="generalGroupBox" Header="{x:Static properties:Resources.GeneralGroupBoxHeader}" VerticalAlignment="Top"
+        <GroupBox Header="{x:Static properties:Resources.GeneralGroupBoxHeader}" VerticalAlignment="Top"
                   Foreground="{DynamicResource {x:Static SystemColors.WindowTextBrushKey}}">
             <StackPanel DockPanel.Dock="Top" Margin="0,2,0,0" KeyboardNavigation.TabNavigation="Contained">
 
                 <CheckBox x:Name="formatOnEnterCheckbox" Content="{x:Static properties:Resources.FormatOnEnterCheckboxContent}"
                           HorizontalAlignment="Left" Margin="0,0,0,7"
-                          ToolTip="{x:Static properties:Resources.FormatOnEnterCheckboxToolTips}"
+                          ToolTip="{x:Static properties:Resources.FormatOnEnterCheckboxToolTip}"
                           IsChecked="{Binding FormatOnEnter}"/>
 
                 <CheckBox x:Name="formatOnPasteCheckbox" Content="{x:Static properties:Resources.FormatOnPasteCheckboxContent}"
                           HorizontalAlignment="Left" Margin="0,0,0,7"
-                          ToolTip="{x:Static properties:Resources.FormatOnPasteCheckboxToolTips}"
+                          ToolTip="{x:Static properties:Resources.FormatOnPasteCheckboxToolTip}"
                           IsChecked="{Binding FormatOnPaste}"/>
 
                 <CheckBox x:Name="formatOnBlockCheckbox" Content="{x:Static properties:Resources.FormatOnBlockCheckboxContent}"
                           HorizontalAlignment="Left" Margin="0,0,0,0"
-                          ToolTip="{x:Static properties:Resources.FormatOnBlockCheckboxToolTips}"
+                          ToolTip="{x:Static properties:Resources.FormatOnBlockCheckboxToolTip}"
                           IsChecked="{Binding FormatOnBlock}"/>
             </StackPanel>
         </GroupBox>
