--- a/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/SpacingUserControl.xaml
+++ b/LanguageModel/LuaVSHost/Formatting/OptionPages/UserControls/SpacingUserControl.xaml
@@ -7,7 +7,7 @@
              xmlns:properties="clr-namespace:Microsoft.VisualStudio.LanguageServices.Lua.Properties"
              mc:Ignorable="d">
     <DockPanel>
-        <GroupBox x:Name="groupBox" Header="{x:Static properties:Resources.SpacingGroupBoxHeader}" VerticalAlignment="Top"
+        <GroupBox Header="{x:Static properties:Resources.SpacingGroupBoxHeader}" VerticalAlignment="Top"
                   Foreground="{DynamicResource {x:Static SystemColors.WindowTextBrushKey}}">
             <StackPanel DockPanel.Dock="Top" Margin="0,2,0,0" KeyboardNavigation.TabNavigation="Contained">
                 <CheckBox x:Name="spaceAfterCommasCheckbox"
